--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "classnames": "^2.2.6",
+    "loaders.css": "^0.1.2",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loaders": "^3.0.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
